# Brasix

./: .gitignore  README.md  pyproject.toml
v1/: BLOCO_0_PLANO_TECNICO.md  README.md  ROADMAP_JOGO.md  pyproject.toml
v1/app/: config.py
v1/data/: cities.json  routes.json
v1/json/: ai_city_autofill_config.json  ai_truck_operational_autofill_config.json  city_catalog.json  city_catalog_user.json  city_catalog_v0.json  city_product_demand_matrix.json  city_product_matrix.json  map_display_settings.json  map_editor_graph_node_styles.json  map_editor_pin_library.json  map_editor_population_bands.json  map_editor_tool_modes.json  map_leaflet_settings.json  map_viewport_config.json  product_catalog.json  route_auto_engine_config.json  route_geometry_types.json  route_network.json  route_surface_types.json  truck_body_catalog.json  truck_brand_family_catalog.json  truck_catalog_edits.json  truck_catalog_hidden.json  truck_category_catalog.json  truck_custom_catalog.json  truck_image_asset_registry.json  truck_image_generation_config.json  truck_image_prompt_export.json  truck_image_prompt_overrides.json  truck_image_review_queue.json  truck_image_visual_definitions.json  truck_silhouette_catalog.json  truck_sprite_2d_catalog.json  truck_type_catalog.json  ui_component_registry.json  ui_design_tokens.json  ui_layout_desktop_main.json  ui_layout_desktop_map_editor.json  ui_layout_desktop_map_editor_v2.json  ui_layout_desktop_route_planner.json  (+13 more)
v1/maps/: maps_registry.json
v1/scripts/: build_canonical_mod_from_workbook.py  build_demand_matrix_from_xlsx.py  (+2 more)
(+312 files in other folders)
