[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brasix"
version = "0.1.0"
description = "Mapa interativo de cidades e commodities do Brasil, preparado para evoluir para um jogo."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1.0",
  "uvicorn>=0.35,<1.0",
  "jinja2>=3.1,<4.0",
  "pydantic>=2.11,<3.0",
  "plotly>=6.0,<7.0",
  "openpyxl>=3.1,<4.0",
  "pillow>=10.0,<11.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.poetry]
package-mode = false

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".pytest_cache", "__pycache__", ".git"]
